added dagger-hilt di in app module

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.android.library"
     id "org.jetbrains.kotlin.android"
     id "kotlin-kapt"
+    id "com.google.dagger.hilt.android"
 }
 
 android {
@@ -35,6 +36,11 @@ dependencies {
     
     testImplementation "junit:junit:$version_junit"
     androidTestImplementation "androidx.test.ext:junit:$version_junit_ext"
+
+    // Dagger - Hilt
+    implementation "com.google.dagger:hilt-android:$version_dagger_hilt"
+    kapt "com.google.dagger:hilt-android-compiler:$version_dagger_hilt"
+    kapt "androidx.hilt:hilt-compiler:$version_dagger_hilt_compiler"
 
     // Room
     annotationProcessor "androidx.room:room-compiler:$version_room"
