--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:$version_dagger_hilt"
     kapt "com.google.dagger:hilt-android-compiler:$version_dagger_hilt"
+    kapt "androidx.hilt:hilt-compiler:$version_dagger_hilt_compiler"
 
     // Moshi
     implementation "com.squareup.moshi:moshi:$version_moshi"
@@ -64,6 +65,11 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
+    // Room
+    annotationProcessor "androidx.room:room-compiler:$version_room"
+    implementation "androidx.room:room-ktx:$version_room"
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
 
     // Test
     testImplementation "junit:junit:$version_junit"
