--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+            android:name=".MusicApp"
             android:allowBackup="true"
             android:usesCleartextTraffic="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
