--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@
 
 
 buildscript {
-
     ext {
         version_appcompat = "1.5.1"
         version_compose = "1.2.1"
@@ -11,6 +10,7 @@ buildscript {
         version_core = "1.9.0"
         version_coroutine = "1.3.7"
         version_dagger_hilt = "2.44"
+        version_dagger_hilt_compiler = "1.0.0"
         version_exoplayer = "2.18.1"
         version_fragment = "2.5.1"
         version_gradle = "7.1.0"
